# rsdownit

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
scripts/: preflight.ps1  verify-release.ps1  version.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_tests.rs  commands.rs  downloader.rs  engine_tests.rs  lib.rs  main.rs  models.rs  security.rs  settings.rs  storage.rs  tools.rs
src-tauri/src/providers/: cobalt.rs  direct.rs  mod.rs  yt_dlp.rs
src/app/: App.interactions.test.tsx  App.test.tsx  App.tsx
src/components/layout/: AppHeader.tsx
src/components/ui/: progress.tsx  select.tsx  switch.tsx
src/features/downloads/: DownloadComposer.tsx  DownloadList.tsx  SetupStatus.tsx
src/features/settings/: SettingsDialog.tsx
src/features/updates/: UpdateDialog.tsx
src/lib/: download-options.test.ts  download-options.ts  tauri-client.test.ts  tauri-client.ts  types.ts  use-theme.ts  utils.test.ts  utils.ts
src/styles/: app.css  fonts.css  tokens.css
tests/: ui-smoke.mjs
