[package]
name = "rsdownit"
version = "0.1.0"
description = "Open-source desktop downloader for video and audio"
authors = ["RlxChap2"]
license = "MIT"
repository = "https://github.com/RlxChap2/rsdownit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rsdownit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.27"
url = "2"
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["process", "io-util", "time", "fs", "macros", "net", "rt-multi-thread"] }
futures-util = "0.3"
dirs = "6"
zip = "4"
uuid = { version = "1", features = ["v4"] }
percent-encoding = "2"
sha2 = "0.11"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

# Keep release binaries small and quick to start on low-end machines.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
